# RWaveAnalyzer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: bench.yml  ci.yml  release.yml
bench/: README.md  gen.py  run.py  stress.fst.xz
crates/rwave/: Cargo.toml
crates/rwave/include/: rwave_backend.h
crates/rwave/src/: cli.rs  commands.rs  condition.rs  filter.rs  format.rs  json.rs  lib.rs  main.rs  model.rs
crates/rwave/src/backend/: bitstr.rs  mod.rs  plugin_backend.rs  wellen_backend.rs
crates/rwave/src/plugin/: ffi.rs  loader.rs  mod.rs  platform.rs
crates/rwave/src/plugin/builtin/: mod.rs
crates/rwave/src/plugin/builtin/fsdb/: backend.rs  diag.rs  fsdb_sys.rs  mod.rs
crates/rwave/src/plugin/builtin/wlf/: backend.rs  diag.rs  mod.rs  wlf_sys.rs
crates/rwave/tests/: search_init_check.rs
docs/: BUILD.md  DESIGN.md  PLUGIN.md
scripts/: build-release.sh  gen-stimulus.sh
skill/: SKILL.md
verify/: README.md  differential.sh  run.sh
verify/fixtures/: basic_trace.fst  bus_range_trace.fst  escaped_trace.fst  handshake_trace.fst  search_trace.fst
verify/stimulus/: counter_fsm.fst  counter_fsm.vcd  edge_cases.fst  edge_cases.vcd  handshake_proto.fst  handshake_proto.vcd  hier_deep.fst  hier_deep.vcd  real_event.fst  real_event.vcd  wide_bus.fst  wide_bus.vcd  xz_tristate.fst  xz_tristate.vcd
verify/stimulus_src/: counter_fsm.v  edge_cases.v  handshake_proto.v  hier_deep.v  real_event.v  wide_bus.v  xz_tristate.v
